[package]
name = "dobato"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls" ], default-features = false }
tokio = { version = "1", features = ["full"] }
